* ADDED: Hook into prolog_edit:select_location to use GUI when running from
  the GUI.

* ADDED: PceEmacs: prolog mode: handle :- multifile directives.

* ADDED: (Finally ...) indication of default-button in default X11
  openLook style.

* FIXED: PceEmacs: Enable timed auto-colouring after ->paste

* ADDED: PceEmacs: language mode: ->insert_file_header.

* FIXED: `text_item->clear' sets <-print_name to '', so the item considers
  itself not modified.

* ENHANCED: Stop wheel-mouse from scrolling windows that have no scrollbar
  (introduced extra optional argument to `window->scroll_vertical' and
  `window->scroll_horizontal').


VERSION 5.1.4
=============

* ADDED: Wheel-mouse handling for Windows (tested on '98)

* FIXED: Install the GUI tracer 16x16 icons (Unix version), reported by
  Frank Schilder.

* FIXED: Clip-handling on Windows, notably using class win_printer.

* FIXED: Line-texture (dashes, etc) in Windows NT/2000.  Slightly enhanced
  and documented shortcommings in Windows 95/98/ME.

* FIXED: Problem in finder (opening files) due to the modified type
  checking in frame->return.

* PORT: Fixed handling of --with-jpeg=<dir> and --with-xpm=<dir>. 
  Thanks to Brad Knotwell.


VERSION 5.1.3
=============

* ADDED: `Edit preferences' item in XPCE manual tool for direct access to
  various preferences files

* ADDED: Make class dialog_group react properly on the existence of a
  <-layout_manager.

* FIXED: `arc<-start', and `arc<-end': crash.

* PORT: Fixed old demo(chess) program to run using GNU-chess.  Only
  tested on the basic responses!

* MODIFIED: `@pce <-operating_system' now returns one of win32, win95
  or winnt on Windows system rather then just the fixed win32.
  @pce<-window_system returns `windows', regardless of the version.

* ENHANCED: Program around 8x8 brush-size limit for DOS-7 based windows
  system (95,98,ME, ...).  Smaller brushes are enlarged automatically,
  while filling rectangular areas using larger brushes is performed